--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+once_cell = "1.18.0"
 reqwest = { version = "0.11.18", features = ["blocking"]}
+tokio = { version = "1.12.0", features = ["macros"] }
+toml = "0.7.6"
