--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,8 @@ edition = "2021"
 [dependencies]
 once_cell = "1.18.0"
 reqwest = { version = "0.11.18", features = ["blocking"]}
+serde_json = "1.0.106"
 tokio = { version = "1.12.0", features = ["macros"] }
-toml = "0.7.6"
+toml = "0.8.0"
+serde = { version = "1.0.164", features = ["derive"] }
+
